--- a/bitcoinApp/package.json
+++ b/bitcoinApp/package.json
@@ -26,6 +26,7 @@
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
     "bigi": "^1.4.2",
+    "browserify": "^16.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
